--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(stm32_client main.cpp
         ErrnoException.h
         CommandProcesser.cpp
         CommandProcesser.h
+        ProtocolMsg.h
 )
