Add concepts of status code, local status code, improved communication protocol, edd ErrnoException windows support, add all led's support for led operation, fixed bugs with endian transfer, improved answer processing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(stm32_client main.cpp
         CommandProcesser.cpp
         CommandProcesser.h
         ProtocolMsg.h
+        LocalStatusCode.h
 )
