Add load msg format, implemented load command (load only)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,4 +9,7 @@ add_executable(stm32_client main.cpp
         CommandProcesser.h
         ProtocolMsg.h
         LocalStatusCode.h
+        BinMsg.cpp
+        BinMsg.h
+        LoadMsg.h
 )
